@startuml
title Modelado de Casilleros


class Casillero {
 - int: energia
 - int: coordenadaX
 - int: coordenadaY
 - boolean: estaOcupado
 - boolean: quitarInvisibilidad
 - int: turno

 + <u>Casillero(coordX, coordY)
 + void: setTipoCasillero(TipoCasillero: unTipoDeCasilleroNuevo)
 + boolean: tieneEnergia()
 + void: energizar()
 + void: desenergizar()
 + boolean: casilleroQuitaInvisibilidad()
 + void: quitarInvisibilidad()
 + void: quitarInvisibilidadEnRango()
 + void: pasarTurno(int: turnoActual)
 + int: extraerMineral(int: cant)
 + int: extraerGas(int: cant)
 + void: volverseMoho()
 + boolean: estaOcupado()
 + void: ocupar()
 + void: desocupar()
 + List<Casillero>: visitarAdyacentes(int turnoActual, Mapa mapa)
 + boolean: tieneEnRango(Unidad unidadAAtacar, int rango)
 + int: posicionX()
 + int: posicionY()
}





Casillero "1" --> "1"Mapa
Mapa "1"--> "1...*" Casillero
Casillero *-- TipoCasillero


class TipoCasillero{

 + int: extraerMineral(int:cantidad)
 + int: extraerGas(int cantidad)
 + void: expandirMoho(List<Casillero> casillasAContagiar)
 + void: volverseMoho(Casillero casillero)
 + void: ocupar(Unidad unidad)
 + void: ocupar(UnidadMovil unidad)
 + void: ocupar(Extractor extractor)
 + void: ocupar(Asimilador asimilador)
 + void: ocupar(NexoMineral nexo)
 + void: ocupar(Criadero criadero)
}

@enduml